style: fix extra space between cards

--- a/src/renderer/src/assets/css/styles.less
+++ b/src/renderer/src/assets/css/styles.less
@@ -17,6 +17,10 @@ html {
   margin-bottom: 0.5rem !important;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem !important;
+}
+
 .mr-2 {
   margin-right: 0.5rem !important;
 }
@@ -98,4 +102,3 @@ html {
     --el-input-border-color: var(--el-color-success) !important;
   }
 }
-
